# aicheckin

./: .coverage  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  aicheckin.py  install.py  pyproject.toml  pyvenv.cfg  requirements.txt  run_test_coverage.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: apisec-scan.yml  black-duck-security-scan-ci.yml  codeql.yml  python-package.yml  python-publish.yml
Scripts/: activate  activate.bat
docs/: architecture.md  versioning.md
examples/: example.ollama_config.json
src/vc_commit_helper/: .ollama_config.json  __init__.py  _version.py  cli.py
src/vc_commit_helper/config/: __init__.py  loader.py
src/vc_commit_helper/grouping/: __init__.py  change_classifier.py  group_model.py
src/vc_commit_helper/llm/: __init__.py  commit_message_generator.py  ollama_client.py
src/vc_commit_helper/vcs/: __init__.py  git_client.py  svn_client.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_additional.py  test_cli_branch_creation.py  test_cli_comprehensive.py  test_cli_progress_and_display.py  test_cli_yes.py  test_config_loader.py  test_config_loader_additional.py  test_config_loader_comprehensive.py  test_config_loader_extra.py  test_config_loader_install_dir.py  test_git_client_extra.py  test_git_client_more.py  test_install_force_coverage.py  test_install_more.py  test_install_unit.py  test_loader_install_dir.py  test_svn_client_more.py  test_version.py
tests/diff/: __init__.py  test_diff_extractor.py  test_diff_extractor_comprehensive.py
tests/grouping/: __init__.py  test_change_classifier.py  test_change_classifier_comprehensive.py  test_group_model.py
tests/llm/: test_commit_message_extraction.py  test_commit_message_generator.py  test_commit_message_generator_extra.py  test_ollama_client.py  test_ollama_client_comprehensive.py  test_ollama_client_edge_cases.py  test_ollama_client_extra.py  test_thinking_filter.py
tests/vcs/: __init__.py  test_git_branch_operations.py  test_git_client.py  test_git_client_comprehensive.py  test_git_client_edge_cases.py  test_git_commit_push_extra.py  test_git_ignore.py  test_svn_branch_operations.py  test_svn_client.py  test_svn_client_comprehensive.py  test_svn_client_edge_cases.py  test_svn_ignore.py
